# amazon-price-tracker

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  QUICK_START.md  README.md  add_sample_data.py  check_slack_channels.py  cli.py  deploy.py  main.py  pyproject.toml  requirements.txt  run_dev.py  setup.py  setup_project.bat  start_production.bat  start_server.bat  stop_server.bat  test_components.py  test_slack.py  test_slack_channels.py
.github/: copilot-instructions.md
app/: __init__.py  app.py
config/: __init__.py  settings.py
database/: __init__.py  db_manager.py  init_db.py  models.py  sample_data.py
notifications/: __init__.py  slack_notifier.py
scraper/: __init__.py  amazon_scraper.py  scheduler.py
static/css/: style.css
static/images/screenshots/: README.md
static/js/: main.js
templates/: base.html  index.html  manage.html  product_detail.html
